--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dio: ^2.1.0
   extended_image: ^0.1.7
   flutter_webview_plugin: ^0.3.1
+  flutter_easyrefresh: ^1.2.7
   
 
 dev_dependencies:
