--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_webview_plugin: ^0.3.1
   flutter_easyrefresh: ^1.2.7
   flutter_section_table_view: ^1.0.3
+  fluttertoast: ^3.0.3
   
 
 dev_dependencies:
