--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_section_table_view: ^1.0.3
   fluttertoast: ^3.0.3
   common_utils: ^1.1.1 
+  zoomable_image: ^1.3.1
+  photo_view: ^0.2.2
 
 dev_dependencies:
   flutter_test:
