--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   common_utils: ^1.1.1 
   zoomable_image: ^1.3.1
   photo_view: ^0.2.2
+  photo: ^0.3.3 # 相册选择
 
 dev_dependencies:
   flutter_test:
